<resources>
    <!-- Shared Preferences -->
    <string name="sharedpreferences_key" translatable="false">GENERALDB</string>
    <string name="sharedpreferences_firstStart" translatable="false">firstStart</string>
    <string name="sharedpreferences_notification" translatable="false">notification</string>
    <string name="sharedpreferences_close_ads" translatable="false">closeAds</string>

    <!-- Ads Settings -->
    <string name="admob_id" translatable="false">xxx</string>
    <string name="admob_banner_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_openapp_id" translatable="false">ca-app-pub-3940256099942544/9257395921</string>


    <string name="app_name" translatable="false">FocusForge</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="notification">Notification</string>
    <string name="close_ads">Close Ads</string>
    <string name="you_have_something_to_do_today">You have something to do today</string>

    <!--Toast Messages -->
    <string name="successfully_save">Successfully Save</string>
    <string name="successfully_update">Successfully Update</string>
    <string name="successfully_delete">Successfully Delete</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
